[project]
name = "SubReDo"
version = "1.2.0"
description = "Apply Cuts from VideoReDo Project Files to Subtitles."
authors = [{ name = "rlaphoenix", email = "rlaphoenix@pm.me" }]
readme = "README.md"
keywords = ["python", "subtitles", "cut", "editor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities"
]

dependencies = [
    "click>=8.3.1",
    "rich>=14.2.0",
    "pymediainfo>=7.0.1",
    "pywin32>=311 ; sys_platform == 'win32'",
    "comtypes>=1.4.13 ; sys_platform == 'win32'",
]
requires-python = ">=3.11"

[project.scripts]
subredo = "subredo.main:main"
